<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="270dp"
    android:layout_margin="11dp"
    android:elevation="2dp"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewNews"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/news_image"
            android:scaleType="centerCrop"
            android:src="@drawable/not_found"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNewsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/imageViewNews"
            android:textStyle="bold"
            android:ellipsize="end"
            android:fontFamily="@font/glacial_bold"
            android:maxLines="2"
            android:text="@string/news_title"
            android:textColor="#000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewNews" />

        <TextView
            android:id="@+id/textViewNewsDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewNewsTitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/imageViewNews"
            android:ellipsize="end"
            android:fontFamily="@font/glacial_reguler"
            android:maxLines="3"
            android:text="@string/news_description"
            android:textColor="#666"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNewsTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
